@@ -27,13 +27,14 @@ import com.intellij.database.datagrid.ModelIndex;
 import com.intellij.database.datagrid.ModelIndexSet;
 import com.intellij.database.datagrid.RawIndexConverter;
 import com.intellij.database.datagrid.ResultView;
+import com.intellij.database.datagrid.ResultViewColumn;
 import com.intellij.database.datagrid.RowSortOrder;
 import com.intellij.database.datagrid.SelectionModel;
 import com.intellij.database.datagrid.SelectionModelUtil;
 import com.intellij.database.datagrid.ViewIndex;
-import com.intellij.database.datagrid.mutating.CellMutation;
 import com.intellij.database.datagrid.color.GridColorModel;
 import com.intellij.database.datagrid.color.GridColorModelImpl;
+import com.intellij.database.datagrid.mutating.CellMutation;
 import com.intellij.database.editor.DataGridColors;
 import com.intellij.database.extractors.BinaryDisplayType;
 import com.intellij.database.extractors.DatabaseObjectFormatterConfig.DatabaseDisplayObjectFormatterConfig;
@@ -53,6 +54,7 @@ import com.intellij.database.run.ui.grid.GridMarkupModelImpl;
 import com.intellij.database.run.ui.grid.GridRowComparator;
 import com.intellij.database.run.ui.grid.GridRowHeader;
 import com.intellij.database.run.ui.table.FormatterConfigCache;
+import com.intellij.database.run.ui.table.GridColumnPinModel;
 import com.intellij.database.run.ui.table.LocalFilterState;
 import com.intellij.database.run.ui.table.TableResultRowHeader;
 import com.intellij.database.run.ui.table.TableResultView;
@@ -91,6 +93,7 @@ import com.intellij.openapi.util.NlsSafe;
 import com.intellij.openapi.util.Pair;
 import com.intellij.openapi.util.SimpleModificationTracker;
 import com.intellij.openapi.util.UserDataHolderBase;
+import com.intellij.openapi.util.registry.Registry;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.openapi.wm.IdeFocusManager;
@@ -132,7 +135,6 @@ import java.awt.Container;
 import java.awt.Dimension;
 import java.awt.Graphics;
 import java.awt.event.ActionEvent;
-import java.awt.event.KeyEvent;
 import java.awt.event.MouseAdapter;
 import java.awt.event.MouseEvent;
 import java.awt.event.MouseListener;
@@ -140,6 +142,7 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Comparator;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
@@ -149,6 +152,7 @@ import java.util.TreeMap;
 import java.util.UUID;
 import java.util.function.BiConsumer;
 import java.util.function.Function;
+import java.util.function.IntUnaryOperator;
 
 import static com.intellij.database.datagrid.GridPresentationMode.TABLE;
 import static com.intellij.database.datagrid.GridUtil.activeGridChanged;
@@ -187,6 +191,7 @@ public class TableResultPanel extends UserDataHolderBase
 {
   private static final ColorKey HOVER_BACKGROUND =
     ColorKey.createColorKey("Table.hoverBackground", JBUI.CurrentTheme.Table.Hover.background(true));
+  private static final Key<Boolean> INITIAL_WIDTH_RESTORED = Key.create("database.grid.initial.width.restored");
   private final String myUniqueId = UUID.randomUUID().toString();
   private static final int RESULT_VIEW_COMPONENT_Z_INDEX = JLayeredPane.DEFAULT_LAYER;
   private static final int LOAD_DATA_Z_INDEX = JLayeredPane.MODAL_LAYER;
@@ -206,6 +211,10 @@ public class TableResultPanel extends UserDataHolderBase
   private final GridColorsScheme myEditorColorsScheme;
 
   private final ColumnAttributes myColumnAttributes;
+  private GridColumnPinModel myColumnPinModel = new GridColumnPinModel();
+  private boolean myUserChangedPinState;
+  private final Map<Integer, String> myKnownColumnNamesById = new HashMap<>();
+  private final Set<String> myPinnedColumnNamesPendingRestore = new LinkedHashSet<>();
   private final Project myProject;
   private Function<DataGrid, ObjectFormatter> myObjectFormatterProvider = null;
 
@@ -512,6 +521,7 @@ public class TableResultPanel extends UserDataHolderBase
       public void error(@NotNull GridRequestSource source, @NotNull ErrorInfo errorInfo) {
         GridRequestSource.GridRequestPlace<?, ?> gridRequestPlace = ObjectUtils.tryCast(source.place, GridRequestSource.GridRequestPlace.class);
         if (gridRequestPlace == null || gridRequestPlace.getGrid() != TableResultPanel.this) return;
+        myPinnedColumnNamesPendingRestore.clear();
         handleError(source, errorInfo);
       }
 
@@ -531,6 +541,15 @@ public class TableResultPanel extends UserDataHolderBase
         GridRequestSource.GridRequestPlace<?, ?> gridRequestPlace = ObjectUtils.tryCast(source.place, GridRequestSource.GridRequestPlace.class);
         if (gridRequestPlace == null || gridRequestPlace.getGrid() != TableResultPanel.this) return;
 
+        if (!myPinnedColumnNamesPendingRestore.isEmpty()) {
+          if (success) {
+            restorePinnedColumnsByName();
+            restoreColumnsOrder();
+          }
+          else {
+            myPinnedColumnNamesPendingRestore.clear();
+          }
+        }
         if (!source.errorOccurred()) hideErrorPanel();
       }
 
@@ -554,7 +573,48 @@ public class TableResultPanel extends UserDataHolderBase
     myResultView.columnsAdded(columnIndices);
     trueLayout();
     restoreColumnsOrder();
+    rememberCurrentColumnNames();
     myColumnModificationTracker.incModificationCount();
+  }
+
+  private void restorePinnedColumnsByName() {
+    if (myPinnedColumnNamesPendingRestore.isEmpty()) return;
+
+    Set<String> namesToRestore = new LinkedHashSet<>(myPinnedColumnNamesPendingRestore);
+    myPinnedColumnNamesPendingRestore.clear();
+
+    GridModel<GridRow, GridColumn> model = getDataModel(DATA_WITH_MUTATIONS);
+    Map<String, Integer> columnIdsByName = new HashMap<>();
+    Set<String> duplicateNames = new HashSet<>();
+    for (ModelIndex<GridColumn> modelIndex : model.getColumnIndices().asIterable()) {
+      GridColumn column = model.getColumn(modelIndex);
+      if (column == null) continue;
+      String name = column.getName();
+      if (columnIdsByName.putIfAbsent(name, modelIndex.value) != null) {
+        duplicateNames.add(name);
+      }
+    }
+
+    List<Integer> restoredIds = new ArrayList<>();
+    for (String name : namesToRestore) {
+      Integer columnId = columnIdsByName.get(name);
+      if (columnId == null) continue;
+      if (!duplicateNames.contains(name)) {
+        restoredIds.add(columnId);
+      }
+    }
+    myColumnPinModel = myColumnPinModel.pinAll(restoredIds);
+  }
+
+  private void rememberCurrentColumnNames() {
+    myKnownColumnNamesById.clear();
+    GridModel<GridRow, GridColumn> model = getDataModel(DATA_WITH_MUTATIONS);
+    for (ModelIndex<GridColumn> modelIndex : model.getColumnIndices().asIterable()) {
+      GridColumn column = model.getColumn(modelIndex);
+      if (column != null) {
+        myKnownColumnNamesById.put(modelIndex.value, column.getName());
+      }
+    }
   }
 
   protected void columnAttributesUpdated() {
@@ -579,14 +639,168 @@ public class TableResultPanel extends UserDataHolderBase
       }
       expectedToModel.put(initialPosition, modelIndex);
     }
+    restoreInitialPinnedColumns();
+    applyPinnedFirstOrder(expectedToModel);
     myResultView.restoreColumnsOrder(expectedToModel);
+    restoreColumnWidths();
+    updateFrozenColumns();
+  }
+
+  /**
+   * Restores persisted pin state into the model. Unions the persisted pins on every {@link #restoreColumnsOrder()}
+   * (so pins survive columns arriving in several batches) until the user changes pins, after which it is a no-op so
+   * in-session unpins are not overridden.
+   */
+  private void restoreInitialPinnedColumns() {
+    if (myUserChangedPinState || !isColumnPinningEnabled()) return;
+    GridModel<GridRow, GridColumn> model = getDataModel(DATA_WITH_MUTATIONS);
+    List<Integer> restoredIds = new ArrayList<>();
+    for (ModelIndex<GridColumn> modelIndex : model.getColumnIndices().asIterable()) {
+      GridColumn column = model.getColumn(modelIndex);
+      if (column != null && getInitialColumnPinned(column)) {
+        restoredIds.add(modelIndex.value);
+      }
+    }
+    myColumnPinModel = myColumnPinModel.pinAll(restoredIds);
+  }
+
+  private void updateFrozenColumns() {
+    if (!(myResultView instanceof TableResultView view)) return;
+    int count = 0;
+    if (isColumnPinningEnabled()) {
+      GridModel<GridRow, GridColumn> model = getDataModel(DATA_WITH_MUTATIONS);
+      for (ModelIndex<GridColumn> column : model.getColumnIndices().asIterable()) {
+        if (isColumnEnabled(column) && isColumnPinned(column)) count++;
+      }
+    }
+    view.setFrozenColumnCount(count);
+  }
+
+  /** Rewrites {@code expectedToModel} so pinned columns take the leading positions, keeping relative order. */
+  private void applyPinnedFirstOrder(@NotNull Map<Integer, ModelIndex<GridColumn>> expectedToModel) {
+    if (!isColumnPinningEnabled() || myColumnPinModel.isEmpty()) return;
+    List<Integer> displayOrder = new ArrayList<>();
+    for (ModelIndex<GridColumn> modelIndex : new TreeMap<>(expectedToModel).values()) {
+      displayOrder.add(modelIndex.value);
+    }
+    List<Integer> pinnedFirst = myColumnPinModel.order(displayOrder);
+    expectedToModel.clear();
+    for (int position = 0; position < pinnedFirst.size(); position++) {
+      expectedToModel.put(position, ModelIndex.forColumn(this, pinnedFirst.get(position)));
+    }
+  }
+
+  public static boolean isColumnPinningEnabled() {
+    return Registry.is("database.grid.column.pinning");
+  }
+
+  public boolean isColumnPinned(@NotNull ModelIndex<GridColumn> columnIdx) {
+    return myColumnPinModel.isPinned(columnIdx.value);
+  }
+
+  public boolean hasPinnedColumns() {
+    return !myColumnPinModel.isEmpty();
+  }
+
+  public void setColumnsPinned(@NotNull ModelIndexSet<GridColumn> columns, boolean pinned) {
+    List<Integer> columnIds = new ArrayList<>(columns.size());
+    for (ModelIndex<GridColumn> column : columns.asIterable()) {
+      columnIds.add(column.value);
+    }
+    GridColumnPinModel updated = pinned ? myColumnPinModel.pinAll(columnIds) : myColumnPinModel.unpinAll(columnIds);
+    applyPinModel(updated);
+  }
+
+  public void unpinAllColumns() {
+    applyPinModel(myColumnPinModel.unpinAll());
+  }
+
+  public void pinColumnsUpToHere(@NotNull ModelIndex<GridColumn> columnIdx) {
+    applyPinModel(myColumnPinModel.pinUpToHere(columnIdx.value, visibleColumnsInDisplayOrder()));
+  }
+
+  public boolean canPinColumnsUpToHere(@NotNull ModelIndex<GridColumn> columnIdx) {
+    return isColumnPinningEnabled() && myColumnPinModel.canPinUpToHere(columnIdx.value, visibleColumnsInDisplayOrder());
+  }
+
+  private @NotNull List<Integer> visibleColumnsInDisplayOrder() {
+    List<Integer> displayOrder = new ArrayList<>();
+    IntUnaryOperator column2Model = getRawIndexConverter().column2Model();
+    for (int viewIdx = 0; viewIdx < getVisibleColumnCount(); viewIdx++) {
+      displayOrder.add(column2Model.applyAsInt(viewIdx));
+    }
+    return displayOrder;
+  }
+
+  private void applyPinModel(@NotNull GridColumnPinModel updated) {
+    if (updated.equals(myColumnPinModel)) return;
+    myPinnedColumnNamesPendingRestore.clear();
+    if (isEditing() && !stopEditing()) cancelEditing();
+    myUserChangedPinState = true;
+    myColumnPinModel = updated;
+    saveAndRestoreSelection(this, this::applyCurrentPinnedOrder);
+    myColumnModificationTracker.incModificationCount();
+  }
+
+  private void applyCurrentPinnedOrder() {
+    List<Integer> displayOrder = visibleColumnsInDisplayOrder();
+    Map<Integer, ModelIndex<GridColumn>> expectedToModel = new LinkedHashMap<>();
+    List<Integer> pinnedFirst = isColumnPinningEnabled() ? myColumnPinModel.order(displayOrder) : displayOrder;
+    for (int position = 0; position < pinnedFirst.size(); position++) {
+      expectedToModel.put(position, ModelIndex.forColumn(this, pinnedFirst.get(position)));
+    }
+    myResultView.restoreColumnsOrder(expectedToModel);
+    updateFrozenColumns();
+  }
+
+  private boolean removeFromPinModel(@NotNull ModelIndex<GridColumn> columnIdx) {
+    GridColumnPinModel updated = myColumnPinModel.onColumnHidden(columnIdx.value);
+    if (updated.equals(myColumnPinModel)) return false;
+    myUserChangedPinState = true;
+    myColumnPinModel = updated;
+    return true;
+  }
+
+  private void restoreColumnWidths() {
+    if (!(myResultView instanceof ResultViewWithColumns resultView)) return;
+    GridModel<GridRow, GridColumn> model = getDataModel(DATA_WITH_MUTATIONS);
+    for (ModelIndex<GridColumn> modelIndex : model.getColumnIndices().asIterable()) {
+      GridColumn column = model.getColumn(modelIndex);
+      if (column == null) continue;
+      int width = getInitialColumnWidth(column);
+      if (width <= 0) continue;
+      ResultViewColumn viewColumn = resultView.getLayoutColumnForDataColumn(modelIndex);
+      if (viewColumn != null && viewColumn.getUserData(INITIAL_WIDTH_RESTORED) == null) {
+        viewColumn.setColumnWidthByUser(width);
+        viewColumn.putUserData(INITIAL_WIDTH_RESTORED, true);
+      }
+    }
   }
 
   @Override
   public void columnsRemoved(ModelIndexSet<GridColumn> columns) {
+    rememberPinnedColumnNames(columns);
+    for (ModelIndex<GridColumn> column : columns.asIterable()) {
+      removeFromPinModel(column);
+    }
     myResultView.columnsRemoved(columns);
+    updateFrozenColumns();
     trueLayout();
     myColumnModificationTracker.incModificationCount();
+  }
+
+  private void rememberPinnedColumnNames(@NotNull ModelIndexSet<GridColumn> removedColumns) {
+    Map<String, Integer> nameCounts = new HashMap<>();
+    for (String name : myKnownColumnNamesById.values()) {
+      nameCounts.merge(name, 1, Integer::sum);
+    }
+    for (ModelIndex<GridColumn> column : removedColumns.asIterable()) {
+      if (!isColumnPinned(column)) continue;
+      String name = myKnownColumnNamesById.get(column.value);
+      if (name != null && nameCounts.getOrDefault(name, 0) == 1) {
+        myPinnedColumnNamesPendingRestore.add(name);
+      }
+    }
   }
 
   @Override
@@ -872,7 +1086,8 @@ public class TableResultPanel extends UserDataHolderBase
 
   @Override
   public boolean isEditing() {
-    return myResultView.isEditing();
+    return myResultView.isEditing() ||
+           myResultView instanceof TableResultView table && table.isEditingInFrozenView();
   }
 
   @Override
@@ -946,11 +1161,11 @@ public class TableResultPanel extends UserDataHolderBase
       int c = viewColumnIdx.asInteger() + 1;
       //noinspection DialogTitleCapitalization
       String title = DataGridBundle.message("action.row.choice.col.text", r, c, c < 1 ? 0 : 1);
-      builder.addLink(title, KeyEvent.VK_N, () -> {
-        if (viewRowIdx.isValid(this) && viewColumnIdx.isValid(this)) {
+      if (viewRowIdx.isValid(this) || viewColumnIdx.isValid(this)) {
+        builder.addLink(title, null, () -> {
           scrollToLocally(this, viewRowIdx, viewColumnIdx);
-        }
-      });
+        });
+      }
     }
     myErrorNotificationPanel = builder
       .addCloseButton(this::hideErrorPanel).build();
@@ -1000,7 +1215,7 @@ public class TableResultPanel extends UserDataHolderBase
   public void toggleSortColumns(@NotNull List<ModelIndex<GridColumn>> columns, boolean additive) {
     if (columns.isEmpty()) return;
     GridModel<GridRow, GridColumn> model = getDataModel();
-    int oldOrder = myColumnAttributes.getSortOrder(model.getColumn(columns.get(0)));
+    int oldOrder = myColumnAttributes.getSortOrder(model.getColumn(columns.getFirst()));
     boolean forceAscOrder = !additive && !areOnlySortedColumns(columns, this);
     RowSortOrder.Type order = forceAscOrder || oldOrder == 0 ? RowSortOrder.Type.ASC :
                               oldOrder < 0 ? RowSortOrder.Type.DESC :
@@ -1351,8 +1566,11 @@ public class TableResultPanel extends UserDataHolderBase
 
   private void dropModelDependentCache() {
     if (!(myResultView instanceof ResultViewWithColumns resultViewWithColumns)) return;
-    for (var columnIdx : getDataModel(DATA_WITH_MUTATIONS).getColumnIndices().asIterable()) {
-      var layoutColumn = resultViewWithColumns.getLayoutColumn(columnIdx);
+    GridModel<GridRow, GridColumn> model = getDataModel(DATA_WITH_MUTATIONS);
+    // layout columns are backed by rows in a transposed view
+    var columnDataIndices = myResultView.isTransposed() ? model.getRowIndices().asIterable() : model.getColumnIndices().asIterable();
+    for (var columnDataIdx : columnDataIndices) {
+      var layoutColumn = resultViewWithColumns.getLayoutColumn(columnDataIdx);
       if (layoutColumn != null) {
         layoutColumn.dropModelDependentCache();
       }
@@ -1553,6 +1771,16 @@ public class TableResultPanel extends UserDataHolderBase
     return null;
   }
 
+  /** Restored user-set column width, or 0 when there is none. */
+  protected int getInitialColumnWidth(@NotNull GridColumn column) {
+    return 0;
+  }
+
+  /** Restored pinned state for the column, or false when there is none. */
+  protected boolean getInitialColumnPinned(@NotNull GridColumn column) {
+    return false;
+  }
+
   @Override
   public void setValueAt(@NotNull ModelIndexSet<GridRow> viewRows,
                          @NotNull ModelIndexSet<GridColumn> viewColumns,
@@ -1708,12 +1936,22 @@ public class TableResultPanel extends UserDataHolderBase
     GridColumn column = getDataModel(DATA_WITH_MUTATIONS).getColumn(columnIdx);
     if (column == null || isColumnEnabled(column) == state) return;
 
+    boolean pinStateChanged = !state && removeFromPinModel(columnIdx);
     myColumnAttributes.setEnabled(column, state);
+    // Restore the frozen copy's width while the main column is still present; after removal its model-to-view
+    // conversion no longer resolves and the cached main column would remain hidden at width zero.
+    if (pinStateChanged && myResultView instanceof TableResultView view) view.setFrozenColumnCount(0);
 
     GridSelection<GridRow, GridColumn> selection = getSelectionModel().store();
     ModelIndex<GridColumn> colIdx = ModelIndex.forColumn(this, column.getColumnNumber());
     storeOrRestoreSelection(colIdx, state, selection);
     myResultView.setColumnEnabled(colIdx, state);
+    if (pinStateChanged) {
+      updateFrozenColumns();
+    }
+    else if (state && hasPinnedColumns()) {
+      applyCurrentPinnedOrder();
+    }
     fireContentChanged(null); // update structure view
     runWithIgnoreSelectionChanges(() -> {
       getSelectionModel().restore(selection);
@@ -1832,7 +2070,10 @@ public class TableResultPanel extends UserDataHolderBase
     GridSelection<GridRow, GridColumn> selection = getSelectionModel().store();
     resetOrderingAndVisibility();
     if (myResultView instanceof ResultViewWithRows) ((ResultViewWithRows)myResultView).resetRowHeights();
-    if (myResultView instanceof ResultViewWithColumns) ((ResultViewWithColumns)myResultView).createDefaultColumnsFromModel();
+    if (myResultView instanceof ResultViewWithColumns) {
+      ((ResultViewWithColumns)myResultView).resetColumnWidths();
+      ((ResultViewWithColumns)myResultView).createDefaultColumnsFromModel();
+    }
     myResultView.resetLayout();
     int[] modelIndices = copy.selectedModelIndices(this);
     selection.addSelectedColumns(this, ModelIndexSet.forColumns(this, modelIndices));
