@@ -3,6 +3,7 @@ package com.intellij.openapi.externalSystem.service.internal;
 
 import com.intellij.execution.process.ProcessOutputType;
 import com.intellij.openapi.diagnostic.Logger;
+import com.intellij.openapi.externalSystem.autoimport.ExternalSystemProjectId;
 import com.intellij.openapi.externalSystem.model.ExternalSystemException;
 import com.intellij.openapi.externalSystem.model.ProjectSystemId;
 import com.intellij.openapi.externalSystem.model.task.ExternalSystemTask;
@@ -23,12 +24,14 @@ import com.intellij.openapi.externalSystem.service.remote.ExternalSystemProgress
 import com.intellij.openapi.externalSystem.util.ExternalSystemBundle;
 import com.intellij.openapi.progress.ProcessCanceledException;
 import com.intellij.openapi.progress.ProgressIndicator;
+import com.intellij.openapi.progress.util.AbstractProgressIndicatorExBase;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.util.Key;
 import com.intellij.openapi.util.NlsContexts;
 import com.intellij.openapi.util.ThrowableComputable;
 import com.intellij.openapi.util.UserDataHolder;
 import com.intellij.openapi.util.UserDataHolderBase;
+import com.intellij.openapi.wm.ex.ProgressIndicatorEx;
 import com.intellij.util.ArrayUtil;
 import com.intellij.util.ThrowableRunnable;
 import org.jetbrains.annotations.ApiStatus;
@@ -37,6 +40,8 @@ import org.jetbrains.annotations.NotNull;
 import java.util.concurrent.CancellationException;
 import java.util.concurrent.atomic.AtomicReference;
 
+import static com.intellij.openapi.externalSystem.util.ExternalSystemLoggerUtilKt.infoWithDebugTrace;
+
 /**
  * Encapsulates particular task performed by external system integration.
  * <p/>
@@ -44,7 +49,7 @@ import java.util.concurrent.atomic.AtomicReference;
  */
 public abstract class AbstractExternalSystemTask extends UserDataHolderBase implements ExternalSystemTask {
 
-  private static final Logger LOG = Logger.getInstance(AbstractExternalSystemTask.class);
+  private static final Logger LOG = Logger.getInstance("#com.intellij.openapi.externalSystem.task");
 
   private final AtomicReference<ExternalSystemTaskState> myState =
     new AtomicReference<>(ExternalSystemTaskState.NOT_STARTED);
@@ -55,6 +60,7 @@ public abstract class AbstractExternalSystemTask extends UserDataHolderBase impl
   private final @NotNull ExternalSystemTaskId myId;
   private final @NotNull ProjectSystemId myExternalSystemId;
   private final @NotNull String myExternalProjectPath;
+  private final @NotNull ExternalSystemProjectId myProjectId;
 
   protected AbstractExternalSystemTask(@NotNull ProjectSystemId id,
                                        @NotNull ExternalSystemTaskType type,
@@ -64,10 +70,17 @@ public abstract class AbstractExternalSystemTask extends UserDataHolderBase impl
     myIdeProject = project;
     myId = ExternalSystemTaskId.create(id, type, myIdeProject);
     myExternalProjectPath = externalProjectPath;
+    myProjectId = new ExternalSystemProjectId(id, externalProjectPath);
+
+    infoWithDebugTrace(LOG, "%s: Execution %s is scheduled".formatted(myProjectId, myId));
   }
 
   public @NotNull ProjectSystemId getExternalSystemId() {
     return myExternalSystemId;
+  }
+
+  public @NotNull ExternalSystemProjectId getExternalProjectId() {
+    return myProjectId;
   }
 
   @Override
@@ -126,6 +139,7 @@ public abstract class AbstractExternalSystemTask extends UserDataHolderBase impl
 
   @Override
   public void execute(final @NotNull ProgressIndicator indicator, ExternalSystemTaskNotificationListener @NotNull ... listeners) {
+    attachProgressIndicator(indicator);
     indicator.setIndeterminate(true);
     var listener = getProgressIndicatorListener(indicator);
     execute(ArrayUtil.append(listeners, listener));
@@ -141,9 +155,11 @@ public abstract class AbstractExternalSystemTask extends UserDataHolderBase impl
   @Override
   public void execute(ExternalSystemTaskNotificationListener @NotNull ... listeners) {
     if (!compareAndSetState(ExternalSystemTaskState.NOT_STARTED, ExternalSystemTaskState.IN_PROGRESS)) {
+      infoWithDebugTrace(LOG, "%s: Execution %s is skipped".formatted(myProjectId, myId));
       return;
     }
     try {
+      infoWithDebugTrace(LOG, "%s: Execution %s is started".formatted(myProjectId, myId));
       addProgressListeners(listeners);
       withProcessingManager(() -> {
         withExecutionProgressManager(() -> {
@@ -153,17 +169,21 @@ public abstract class AbstractExternalSystemTask extends UserDataHolderBase impl
         });
       });
     }
-    catch (CancellationException _) {
-      // the exception shouldn't be thrown due to the legacy architecture decision
-      // if the exception would be thrown, the cancellation will never be handled due to
-      // {@link com.intellij.openapi.externalSystem.util.ExternalSystemUtil.handleSyncResult}
-      LOG.info(String.format("The execution %s was cancelled", myId));
+    catch (CancellationException e) {
+      // The exception shouldn't be re-thrown due to the legacy architecture decision.
+      // @see com.intellij.openapi.externalSystem.util.ExternalSystemUtil.handleSyncResult
+      // @see com.intellij.openapi.externalSystem.service.execution.ExternalSystemRunnableState
+      //noinspection IncorrectCancellationExceptionHandling
+      LOG.infoWithDebug("%s: Execution %s is cancelled".formatted(myProjectId, myId), e);
     }
     catch (Exception e) {
-      LOG.warn(myId + ": Task execution failed", e);
+      LOG.warn("%s: Execution %s is failed".formatted(myProjectId, myId), e);
     }
     catch (Throwable e) {
-      LOG.error(e);
+      LOG.error("%s: Execution %s is failed".formatted(myProjectId, myId));
+    }
+    finally {
+      LOG.info("%s: Execution %s is finished".formatted(myProjectId, myId));
     }
   }
 
@@ -171,12 +191,15 @@ public abstract class AbstractExternalSystemTask extends UserDataHolderBase impl
   public boolean cancel(ExternalSystemTaskNotificationListener @NotNull ... listeners) {
     var currentTaskState = getState();
     if (currentTaskState.isStopped()) {
+      infoWithDebugTrace(LOG, "%s: Cancellation %s is skipped".formatted(myProjectId, myId));
       return true;
     }
     if (!compareAndSetState(currentTaskState, ExternalSystemTaskState.CANCELING)) {
+      infoWithDebugTrace(LOG, "%s: Cancellation %s is skipped (corrupted state)".formatted(myProjectId, myId));
       return false;
     }
     try {
+      infoWithDebugTrace(LOG, "%s: Cancellation %s is started".formatted(myProjectId, myId));
       addProgressListeners(listeners);
       return withCancellationProgressManager(() -> {
         return withCancellationState(() -> {
@@ -188,10 +211,13 @@ public abstract class AbstractExternalSystemTask extends UserDataHolderBase impl
       showCancellationFailedNotification(e);
     }
     catch (Exception e) {
-      LOG.debug(e);
+      LOG.warn("%s: Cancellation %s is failed".formatted(myProjectId, myId), e);
     }
     catch (Throwable e) {
-      LOG.error(e);
+      LOG.error("%s: Cancellation %s is failed".formatted(myProjectId, myId), e);
+    }
+    finally {
+      LOG.info("%s: Cancellation %s is finished".formatted(myProjectId, myId));
     }
     return false;
   }
@@ -335,7 +361,7 @@ public abstract class AbstractExternalSystemTask extends UserDataHolderBase impl
   }
 
   /**
-   * @see com.intellij.openapi.util.UserDataHolderBase#copyUserDataTo
+   * @see UserDataHolderBase#copyUserDataTo
    */
   @ApiStatus.Internal
   @SuppressWarnings({"unchecked", "rawtypes"})
@@ -361,6 +387,18 @@ public abstract class AbstractExternalSystemTask extends UserDataHolderBase impl
         manager.onTaskOutput(id, text, processOutputType);
       }
     };
+  }
+
+  private void attachProgressIndicator(@NotNull ProgressIndicator indicator) {
+    if (indicator instanceof ProgressIndicatorEx indicatorEx) {
+      indicatorEx.addStateDelegate(new AbstractProgressIndicatorExBase() {
+        @Override
+        public void cancel() {
+          super.cancel();
+          AbstractExternalSystemTask.this.cancel();
+        }
+      });
+    }
   }
 
   private @NotNull ExternalSystemTaskNotificationListener getProgressIndicatorListener(@NotNull ProgressIndicator indicator) {
