@@ -4,6 +4,7 @@ import com.intellij.openapi.util.Ref;
 import com.intellij.psi.PsiElement;
 import com.intellij.psi.PsiFile;
 import com.intellij.psi.util.QualifiedName;
+import com.intellij.util.ObjectUtils;
 import com.intellij.util.containers.ContainerUtil;
 import com.jetbrains.python.psi.PyClass;
 import com.jetbrains.python.psi.PyDecoratable;
@@ -15,12 +16,18 @@ import com.jetbrains.python.psi.PyKnownDecoratorUtil;
 import com.jetbrains.python.psi.PyNamedParameter;
 import com.jetbrains.python.psi.PyTypedElement;
 import com.jetbrains.python.psi.impl.ParamHelper;
+import com.jetbrains.python.psi.impl.PyCallExpressionHelper;
+import com.jetbrains.python.psi.types.PyAnyType;
 import com.jetbrains.python.psi.types.PyCallableParameter;
+import com.jetbrains.python.psi.types.PyCallableParameterImpl;
 import com.jetbrains.python.psi.types.PyCallableType;
 import com.jetbrains.python.psi.types.PyCallableTypeImpl;
 import com.jetbrains.python.psi.types.PyClassType;
-import com.jetbrains.python.psi.types.PySyntheticCallHelper;
+import com.jetbrains.python.psi.types.PyClassTypeImpl;
+import com.jetbrains.python.psi.types.PyConcatenateType;
+import com.jetbrains.python.psi.types.PyParamSpecType;
 import com.jetbrains.python.psi.types.PyType;
+import com.jetbrains.python.psi.types.PyCallableArgument;
 import com.jetbrains.python.psi.types.PyTypeChecker;
 import com.jetbrains.python.psi.types.PyTypeProviderBase;
 import com.jetbrains.python.psi.types.TypeEvalContext;
@@ -72,9 +79,74 @@ public final class PyDecoratedFunctionTypeProvider extends PyTypeProviderBase {
       if (paramPos < 0) return null;
 
       var type = ParamHelper.getExpectedTypeForPositionalParam(paramPos, expectedParams, context);
+      // A Concatenate/ParamSpec describes a whole parameter list, not a single parameter's type, so it must
+      // not be assigned to one parameter - defer to regular inference.
+      if (type instanceof PyConcatenateType || type instanceof PyParamSpecType) return null;
+
+      // When the expected parameter type is a free type variable of a generic decorator, bind it from the
+      // type the surrounding decorator chain expects of this decorator's result.
+      if (type != null && PyTypeChecker.hasGenerics(type, context)) {
+        PyType resolved = resolveGenericParamFromDecoratorChain(decorators, i, decorator, type, context);
+        if (resolved != null) type = resolved;
+      }
       return type != null ? Ref.create(type) : null;
     }
     return null;
+  }
+
+  /**
+   * Binds {@code expectedParamType}'s type variables by matching the decorator's return type against the type
+   * the surrounding decorators expect of its result. E.g. for {@code @d2 @d1 def f(i)} with
+   * {@code d1(fn: Callable[[T], object]) -> T} and {@code d2(i: int)}, {@code T} binds to {@code int}.
+   */
+  private static @Nullable PyType resolveGenericParamFromDecoratorChain(PyDecorator @NotNull [] decorators,
+                                                                        int decoratorIndex,
+                                                                        @NotNull PyDecorator decorator,
+                                                                        @NotNull PyType expectedParamType,
+                                                                        @NotNull TypeEvalContext context) {
+    PyType expectedResultType = expectedResultType(decorators, decoratorIndex, context);
+    if (expectedResultType == null) return null;
+
+    PyCallableType decoratorType = getDecoratorType(decorator, null, context);
+    PyType decoratorReturnType = decoratorType != null ? decoratorType.getReturnType(context) : null;
+    return bindGenerics(decoratorReturnType, expectedResultType, expectedParamType, context);
+  }
+
+  /**
+   * The type the nearest non-transparent decorator wrapping {@code decorators[decoratorIndex]} expects of its
+   * result, resolving a generic outer decorator recursively from what wraps it.
+   */
+  private static @Nullable PyType expectedResultType(PyDecorator @NotNull [] decorators,
+                                                     int decoratorIndex,
+                                                     @NotNull TypeEvalContext context) {
+    for (int j = decoratorIndex - 1; j >= 0; j--) {
+      if (isTransparentDecorator(decorators[j], context)) continue;
+
+      PyCallableType outerType = getDecoratorType(decorators[j], null, context);
+      List<PyCallableParameter> outerParams = outerType != null ? outerType.getParameters(context) : null;
+      if (outerParams == null || outerParams.isEmpty()) return null;
+
+      PyType expectedArgType = outerParams.getFirst().getType(context);
+      if (expectedArgType != null && PyTypeChecker.hasGenerics(expectedArgType, context)) {
+        expectedArgType = bindGenerics(outerType.getReturnType(context),
+                                       expectedResultType(decorators, j, context), expectedArgType, context);
+      }
+      return expectedArgType;
+    }
+    return null;
+  }
+
+  private static @Nullable PyType bindGenerics(@Nullable PyType declaredResult,
+                                               @Nullable PyType expectedResult,
+                                               @Nullable PyType typeToResolve,
+                                               @NotNull TypeEvalContext context) {
+    if (declaredResult == null || expectedResult == null) return typeToResolve;
+
+    PyTypeChecker.GenericSubstitutions substitutions = new PyTypeChecker.GenericSubstitutions();
+    if (!PyTypeChecker.match(declaredResult, expectedResult, context, substitutions)) {
+      return typeToResolve;
+    }
+    return PyTypeChecker.substitute(typeToResolve, substitutions, context);
   }
 
   /**
@@ -84,7 +156,7 @@ public final class PyDecoratedFunctionTypeProvider extends PyTypeProviderBase {
    */
   private static @Nullable List<PyCallableParameter> getExpectedFunctionParameters(@NotNull PyDecorator decorator,
                                                                                    @NotNull TypeEvalContext context) {
-    var decoratorCallableType = getDecoratorType(decorator, null, context);
+    var decoratorCallableType = getDecoratorType(decorator, PyAnyType.getUnknown(), context);
     if (decoratorCallableType == null) return null;
 
     var decoratorParams = decoratorCallableType.getParameters(context);
@@ -93,12 +165,7 @@ public final class PyDecoratedFunctionTypeProvider extends PyTypeProviderBase {
     var expectedFuncType = decoratorParams.getFirst().getType(context);
     if (!(expectedFuncType instanceof PyCallableType expectedCallable)) return null;
 
-    var expectedParams = expectedCallable.getParameters(context);
-    if (expectedParams == null) return null;
-
-    // Apply implicit offset to skip self-like params in the expected callable
-    int implicitOffset = Math.min(expectedCallable.getImplicitOffset(), expectedParams.size());
-    return expectedParams.subList(implicitOffset, expectedParams.size());
+    return expectedCallable.getParameters(context);
   }
 
   @Override
@@ -137,7 +204,8 @@ public final class PyDecoratedFunctionTypeProvider extends PyTypeProviderBase {
           return false;
         }
       }
-      else if (res instanceof PyClass) {
+      // A class, or an alias to one, is a typed decorator, not an identity one.
+      else if (resolveDecoratorClass(res, context) != null) {
         return false;
       }
     }
@@ -167,13 +235,7 @@ public final class PyDecoratedFunctionTypeProvider extends PyTypeProviderBase {
 
       PyCallableType decoratorType = getDecoratorType(decorator, argument, context);
       if (decoratorType != null) {
-        PyType newType = PySyntheticCallHelper.getCallTypeOnTypesOnly(
-          decoratorType,
-          null,
-          Collections.singletonList(argument),
-          context
-        );
-
+        PyType newType = PyCallExpressionHelper.getCallType(decoratorType, List.of(new PyCallableArgument(argument)), context);
         if (newType instanceof PyCallableType newFunctionType) {
           currentType = newFunctionType;
         }
@@ -185,8 +247,7 @@ public final class PyDecoratedFunctionTypeProvider extends PyTypeProviderBase {
         currentType.getParameters(context),
         currentType.getReturnType(context),
         callableReference,
-        currentType.getModifier(),
-        currentType.getImplicitOffset()
+        callableReference.getModifier()
       ));
     }
 
@@ -216,7 +277,8 @@ public final class PyDecoratedFunctionTypeProvider extends PyTypeProviderBase {
       else {
         overloads = Collections.emptyList();
       }
-      return getDecoratorCalleeType(typedElement, Collections.singletonList(decoratedFunctionType), overloads, context);
+      return getDecoratorCalleeType(typedElement, Collections.singletonList(new PyCallableArgument(decoratedFunctionType)), overloads,
+                                    context);
     }
 
     return null;
@@ -234,7 +296,7 @@ public final class PyDecoratedFunctionTypeProvider extends PyTypeProviderBase {
 
     // Shortcircuit:
     // if there are no overloads and the decorator is not generic,
-    // there's no need to `PySyntheticCallHelper.getCallTypeOnTypesOnly` to get its return type
+    // there's no need to `PyCallExpressionHelper.getCallType` to get its return type
     // and a simple `getReturnType` can be used instead
     if (typedElementType instanceof PyCallableType callableType &&
         !PyTypeChecker.hasGenerics(typedElementType, context) &&
@@ -262,13 +324,7 @@ public final class PyDecoratedFunctionTypeProvider extends PyTypeProviderBase {
     // TODO: instead, we should return an UnsafeUnion of all possible overloads
     PyCallableType decoratorCalleeType = getDecoratorCalleeType(typedElement, List.of(), overloads, context);
     if (decoratorCalleeType != null) {
-      PyType newType = PySyntheticCallHelper.getCallTypeOnTypesOnly(
-        decoratorCalleeType,
-        null,
-        List.of(),
-        context
-      );
-
+      PyType newType = PyCallExpressionHelper.getCallType(decoratorCalleeType, List.of(), context);
       if (newType instanceof PyCallableType newFunctionType) {
         return newFunctionType;
       }
@@ -278,7 +334,7 @@ public final class PyDecoratedFunctionTypeProvider extends PyTypeProviderBase {
   }
 
   private static @Nullable PyCallableType getDecoratorCalleeType(@NotNull PyTypedElement typedElement,
-                                                                 @NotNull List<@Nullable PyType> decoratorArgumentTypes,
+                                                                 @NotNull List<PyCallableArgument> arguments,
                                                                  @NotNull List<PyFunction> overloads,
                                                                  @NotNull TypeEvalContext context) {
     List<? extends PyTypedElement> resolvedElements;
@@ -287,7 +343,11 @@ public final class PyDecoratedFunctionTypeProvider extends PyTypeProviderBase {
         resolvedElements = List.of(resolvedFunction);
       }
       else {
-        resolvedElements = PySyntheticCallHelper.matchOverloadsByArgumentTypes(overloads, decoratorArgumentTypes, null, context);
+        List<PyCallableType> overloadTypes =
+          ContainerUtil.mapNotNull(overloads, overload -> ObjectUtils.tryCast(context.getType(overload), PyCallableType.class));
+        resolvedElements = ContainerUtil.mapNotNull(
+          PyCallExpressionHelper.selectMatchingOverloads(overloadTypes, arguments, context),
+          PyCallableType::getCallable);
       }
     }
     else {
@@ -297,13 +357,19 @@ public final class PyDecoratedFunctionTypeProvider extends PyTypeProviderBase {
     if (resolvedElements.size() == 1) {
       PyTypedElement resolvedElement = resolvedElements.getFirst();
       PyType type;
-      if (resolvedElement instanceof PyClass pyClass) {
-        type = PyTypeChecker.findGenericDefinitionType(pyClass, context);
+      // A decorator may be a class or an alias to one; treat both as a constructor call.
+      PyClass decoratorClass = resolveDecoratorClass(resolvedElement, context);
+      if (decoratorClass != null) {
+        PyCallableType constructorType = buildGenericConstructorType(decoratorClass, context);
+        if (constructorType != null) {
+          return constructorType;
+        }
+        type = PyTypeChecker.findGenericDefinitionType(decoratorClass, context);
         if (type instanceof PyClassType classType) {
           type = classType.toClass();
         }
         if (type == null) {
-          type = pyClass.getType(context);
+          type = decoratorClass.getType(context);
         }
       }
       else {
@@ -314,5 +380,38 @@ public final class PyDecoratedFunctionTypeProvider extends PyTypeProviderBase {
       }
     }
     return null;
+  }
+
+  /** Returns the class a decorator denotes directly or through a {@code Name = SomeClass} alias, else null. */
+  private static @Nullable PyClass resolveDecoratorClass(@NotNull PsiElement element, @NotNull TypeEvalContext context) {
+    if (element instanceof PyClass pyClass) {
+      return pyClass;
+    }
+    if (element instanceof PyTypedElement typedElement &&
+        context.getType(typedElement) instanceof PyClassType classType && classType.isDefinition()) {
+      return classType.getPyClass();
+    }
+    return null;
+  }
+
+  /**
+   * Constructor callable of a generic class decorator: result is the generic definition ({@code C[_T]}) with
+   * the (possibly inherited) constructor params remapped to the class's own type parameters. Null if not
+   * generic or no usable constructor.
+   */
+  private static @Nullable PyCallableType buildGenericConstructorType(@NotNull PyClass pyClass, @NotNull TypeEvalContext context) {
+    PyClassType genericDefinition = PyTypeChecker.findGenericDefinitionType(pyClass, context);
+    if (genericDefinition == null) return null;
+
+    List<PyCallableParameter> constructorParameters = new PyClassTypeImpl(pyClass, true).getParameters(context);
+    if (constructorParameters == null || constructorParameters.isEmpty()) return null;
+
+    PyTypeChecker.GenericSubstitutions substitutions = PyTypeChecker.INSTANCE.collectTypeSubstitutions(genericDefinition, context);
+    List<PyCallableParameter> remappedParameters = ContainerUtil.map(
+      constructorParameters,
+      parameter -> PyCallableParameterImpl.nonPsi(parameter.getName(),
+                                                  PyTypeChecker.substitute(parameter.getType(context), substitutions, context),
+                                                  parameter.getDefaultValue()));
+    return new PyCallableTypeImpl(remappedParameters, genericDefinition);
   }
 }
